added devfaction-boulder link

--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
                 <br><br>
                 Tech: Web, Virtual Reality, Augmented Reality, Neural Networks, Autonomous Cars, AI.
                 <br><br>
-                Meetups: <a href="https://www.meetup.com/Boulder-JS/" alt="Boulder JS" target="_blank">Boulder JS</a>, <a href="https://www.meetup.com/Colorado-VR/" alt="COVR" target="_blank">Colorado Virtual Reality - COVR</a>, <a href="https://www.meetup.com/DenverScript/" alt="DenverScript" target="_blank">DenverScript</a>, <a href="https://www.meetup.com/bdnewtech/" alt="New Tech" target="_blank">New Tech Colorado</a>
+                Meetups: <a href="https://www.meetup.com/Boulder-JS/" alt="Boulder JS" target="_blank">Boulder JS</a>, <a href="https://www.meetup.com/Colorado-VR/" alt="COVR" target="_blank">Colorado Virtual Reality - COVR</a>, <a href="https://www.meetup.com/DenverScript/" alt="DenverScript" target="_blank">DenverScript</a>, <a href="https://www.meetup.com/bdnewtech/" alt="New Tech" target="_blank">New Tech Colorado</a>, <a href="https://www.meetup.com/DevFaction-Boulder/" alt="DevFaction-Boulder" target="_blank">DevFaction-Boulder</a>
                 <br><br>
                 CompTIA A+ Certified
                 <br><br>
-                <a href="http://nowherelimited.com/paul-humphrey-inversions.html" alt="Inversions review" target="_blank">A nice review of one of my films.</a>
+                <a href="http://nowherelimited.com/paul-humphrey-inversions.html" alt="Inversions review" target="_blank">A nice review of one of my films</a>.
                 <br><br>
-                <a href="https://medium.com/@pablo727272/codecraft-school-in-boulder-co-week-8-hackathon-376a9f89e7d7" alt="Hackleberry Finn hackathon" target="_blank">Blog post about my Hackleberry Finn hackathon project, August 2017.</a></p>
+                <a href="https://medium.com/@pablo727272/codecraft-school-in-boulder-co-week-8-hackathon-376a9f89e7d7" alt="Hackleberry Finn hackathon" target="_blank">Blog post about my Hackleberry Finn hackathon project, August 2017</a>.</p>
             </div>
         <!-- close interests container -->
         </div>
