--- a/404.html
+++ b/404.html
@@ -3,24 +3,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <!-- vue.js -->
-        <script src="https://unpkg.com/vue"></script>
-        <meta charset="utf-8"/>
-        <title>404 - Page Not Found</title>
-        <!-- mobile ready -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- favicons -->
-        <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
-        <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
-        <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96">
-        <!-- bootstrap css -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-            crossorigin="anonymous">
-        <!-- google fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Bellefair|Lobster+Two|Lora|Roboto" rel="stylesheet">
-        <!-- custom css -->
-        <link rel="stylesheet" href="/css/main.css">
+<head>
+    <!-- vue.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.min.js"></script>
+    <!-- jQuery js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- bootstrap js -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <meta charset="utf-8"/>
+    <title>Paul Humphrey - 404</title>
+    <!-- mobile ready -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- favicons -->
+    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Bellefair|Lobster+Two|Lora|Roboto" rel="stylesheet">
+    <!-- custom css -->
+    <link rel="stylesheet" href="/css/main.css">
         <style>
           body {background-image: url("/images/stars.jpg");}
           h1,h4 {color: lightgray;}
@@ -38,13 +43,6 @@
             </div>
         </div> <!-- end vue app -->
 
-
-    <!-- jQuery js -->
-    <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
-    <!-- bootstrap js -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
     <!-- custom js -->
     <script src="/js/main.js"></script>
     </body>
